Added titles to labels
Hidden checkboxes add a lot of power...

--- a/DragonTacticsSheet.html
+++ b/DragonTacticsSheet.html
@@ -465,7 +465,7 @@
         <h2>Key Values</h2>
         <div class="hp">
             <h3>Hit Points</h3>
-            <label class="numblock-container hp-setup">
+            <label class="numblock-container hp-setup" title="Click here to modify your max HP">
                 <div class="numblock hp-max">
                     Max
                     <span name="attr_hp_max" value="20">20</span>
@@ -496,7 +496,7 @@
         </div>
         <div class="armor">
             <h3>Defenses</h3>
-            <label class="numblock-container AC">
+            <label class="numblock-container AC" title="Click here to add misc bonuses">
                 <div class="numblock defense-block">
                     Armor Class
                     <span name="attr_ac" value="10" class="defense">10</span>
@@ -508,7 +508,7 @@
                     </label>
                 </div>
             </label>
-            <label class="numblock-container NAD">
+            <label class="numblock-container NAD" title="Click here to add misc bonuses">
                 <div class="numblock defense-block">
                     Fortitude
                     <span name="attr_fort" value="10" class="defense" >10</span>
@@ -521,7 +521,7 @@
                     </label>
                 </div>
             </label>
-            <label class="numblock-container NAD">
+            <label class="numblock-container NAD" title="Click here to add misc bonuses">
                 <div class="numblock defense-block">
                     Reflex
                     <span name="attr_ref" value="10" class="defense" >10</span>
@@ -534,7 +534,7 @@
                     </label>
                 </div>
             </label>
-            <label class="numblock-container NAD">
+            <label class="numblock-container NAD" title="Click here to add misc bonuses">
                 <div class="numblock defense-block">
                     Will
                     <span name="attr_will" value="10" class="defense" >10</span>
